k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transkriptor
  namespace: transkriptor
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2g"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: transkriptor.lab.allwaysbeginner.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transkriptor
                port:
                  number: 80
